# phystem

./: .gitignore  LICENSE  README.md  main.py  main_ring.py  main_self_prop.py  pyproject.toml  teste.pickle  teste.py
cpp/pybind/: pywrap.cpp
cpp/src/: config_py.h  rng_manager.h  solver.h  windows_manager.h
cpp/tests/: test_solver  test_solver.cpp
docs/: Gemfile  README.md  _config.yml  blog.html  index.md
docs/_data/: docs_nav.yaml  navigation.yml
docs/_docs/: implemented_systems.md  installation.md  introduction.md  systems.md  tutorial_step_by_step.md
docs/_includes/: navigation.html
docs/_layouts/: base.html  default.html  docs.html  index.html  post.html
docs/_posts/: 2024-06-15-welcome-to-jekyll.markdown  2024-08-25-first_post.md  2024-08-26-live_system_data.md  2024-09-01-rectangular_grid.md  2024-09-20-mini_improvements.md
docs/docs/: implemented_systems.md  introduction.md  tutorial_step_by_step.md
examples/random_walker/: main.py  real_time.py
examples/ring/: main_ring.py  periodic_borders_real_time.py  stokes_exemple.py  stokes_real_time.py  stress_test.py  test.ipynb
examples/szabo/: main_self_prop.py  real_time.py
lib/ic_utils/: count_lines.ipynb
lib/physical_system/: collect_pipelines.py  collectors.py  configs.py  cpp_lib.pyi  graph.py  particles.py  simulation.py  solver.py
lib/phystem/cpp/tests_ui/ui/: CMakeLists.txt
lib/phystem/cpp/tests_ui/ui/src/: core_gui.h  opengl_error.cpp  shader_loader.h
lib/phystem/cpp/tests_ui/ui/src/configs/: graph.h  run.h
lib/phystem/cpp/tests_ui/ui/src/shaders/points/: fragment.glsl
lib/phystem/cpp/ui/: CMakeLists.txt
lib/phystem/cpp/ui/src/: application.cpp  gui.cpp  main.cpp  main_graph.cpp  shader_loader.h  timer.cpp
lib/phystem/cpp/ui/src/headers/: application.h  graph_cfg.h  gui.h  main_graph.h  timer.h
lib/phystem/cpp/ui/src/shaders/: fragment.glsl
lib/phystem/cpp/ui/src/shaders/points/: vertex.glsl
lib/phystem/cpp/ui/src/solver_test/: solver.cpp
lib/phystem/cpp/ui/src/solver_test/headers/: solver.h
lib/ui_geometry/: managers.py
lib/ui_phystem/: geometry.py  graph.py  space_config.py  widget.py
src/phystem/: test_install.py
src/phystem/cpp/tests_ui/: CMakeLists.txt
src/phystem/cpp/tests_ui/area_potencial/: gui.h  main.cpp
src/phystem/cpp/tests_ui/rigid_potencial/: graph.h  gui.h  solver.h
src/phystem/cpp/tests_ui/self_propelling/: graph2.h  main.cpp  solver.h
src/phystem/cpp/tests_ui/ui/src/: core_application.h  core_graphs.h  main_graph_old.cpp
src/phystem/cpp/tests_ui/ui/src/configs/: layout.h
src/phystem/cpp/tests_ui/ui/src/graphs/: points_graph.h
src/phystem/cpp/tests_ui/ui/src/headers/: geometry.h  opengl_error.h  timer.h
src/phystem/cpp/tests_ui/ui/src/shaders/: vertex.glsl
tests/: test_collectors.py  test_cpp_lib.ipynb  test_data.ipynb  test_quantities.py  test_ring.py  test_self_prop.py  test_tests.py
tests/core/: auto_savable.py
tests/data_test/: generate_data.py
tests/ring/: potencial.ipynb  (+2 more)
(+404 files in other folders)
